--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -60,9 +60,9 @@
     color: var(--link-color);
 
     &:hover {
-      background: #2a408e;
-      color: #fff;
-      border-color: #2a408e;
+      background: #fff;
+      color: #000000;
+      border-color: #858686;
     }
 
     &.disabled {
@@ -247,13 +247,13 @@
     }
     .fab {
       &.fa-twitter {
-        @include btn-sharing-color(rgba(29, 161, 242, 1));
+        @include btn-sharing-color(rgb(143, 143, 143));
       }
       &.fa-facebook-square {
-        @include btn-sharing-color(rgb(66, 95, 156));
+        @include btn-sharing-color(rgb(78, 78, 78));
       }
       &.fa-telegram {
-        @include btn-sharing-color(rgb(39, 159, 217));
+        @include btn-sharing-color(rgb(116, 116, 116));
       }
       &.fa-weibo {
         @include btn-sharing-color(rgb(229, 20, 43));
