--- a/_sass/variables-hook.scss
+++ b/_sass/variables-hook.scss
@@ -1,3 +1,14 @@
 /*
   Appending custom SCSS variables will override the default ones in `_sass/addon/variables.scsss`
 */
+
+@mixin light-scheme {
+
+  /* Sidebar */
+  --sidebar-bg : #d3d3d3;
+  --nav-cursor-color: #ffffff;
+}
+
+@mixin sidebar-links($color: #2c2c2c) {
+  color: $color;
+}
