--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -38,8 +38,8 @@
             <li class="divider"></li>
 
             <li>
-                <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
-                    Fork it Now!
+                <a href="https://www.youtube.com/watch?v=hr2xGbc6jO0&t=286s" target="blank" class="gitbook-link">
+                    Test!
                 </a>
             </li>
         </ul>
