--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,21 +26,14 @@
             </div>
 
 
-            <div style="text-align: center;">
+            <!-- <div style="text-align: center;">
                 <a href="http://hits.dwyl.com/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}/{{ page.url | remove_first: '/' | replace: '/', '-' }}" target="_blank">
                     <img src="http://hits.dwyl.com/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}/{{ page.url | remove_first: '/' | replace: '/', '-' }}.svg" />
                 </a>
-                </div> 
+                </div>  -->
 
                 
-            <script src="https://utteranc.es/client.js"
-                    repo="Jerrykim91 / jerrykim91.github.io"
-                    issue-term="title"
-                    label="😎"
-                    theme="github-light"
-                    crossorigin="anonymous"
-                    async>
-            </script>
+
 
             <!-- {%- include search.html -%} -->
 
