--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,6 +45,15 @@
                 gitbook.page.hasChanged({%- include metadata-post.json.tpl -%});
             });
             </script>
+
+            <script src="https://utteranc.es/client.js"
+            repo="Jerrykim91/jerrykim91.github.io"
+            issue-term="title"
+            label="😎"
+            theme="github-light"
+            crossorigin="anonymous"
+            async>
+            </script>
         </div>
 
         {%- include footer.html -%}
