--- a/_includes/body.html
+++ b/_includes/body.html
@@ -30,4 +30,12 @@
             </div>
         </div>
     </div>
+    <script src="https://utteranc.es/client.js"
+        repo="Jerrykim91/jerrykim91.github.io"
+        issue-term="title"
+        label="😎"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+        </script>
 </div>
