--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,8 @@
             {%- include toc-date.html -%}
 
             <div class="book-body">
+                <a href="https://hits.seeyoufarm.com">
+                    <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
                 {%- include body.html -%}
 
                 {% if reversed_posts %}
