--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,16 @@
                         <i class="fa fa-angle-right"></i>
                     </a>
                 {% endif %}
+                <br>
+                    <script src="https://utteranc.es/client.js"
+                    repo="Jerrykim91/jerrykim91.github.io"
+                    issue-term="title"
+                    label="😎"
+                    theme="github-light"
+                    crossorigin="anonymous"
+                    async>
+                </script>
+                <br>
             </div>
 
             <script>
