--- a/_includes/body.html
+++ b/_includes/body.html
@@ -11,6 +11,8 @@
         </h1>
     </div>
     <div class="page-wrapper" tabindex="-1" role="main">
+        <a href="https://hits.seeyoufarm.com">
+            <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
         <div class="page-inner">
             <div id="book-search-results">
                 <div class="search-noresults">
