--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,10 @@
         {% endif %}
     </head>
     <body>
+        <li><a class="introduce_link" href="https://github.com/madplay" rel="nofollow" target="_blank">Github</a>
+            <img src="https://ghchart.rshah.org/madplay" alt="Github Image" style="max-width:100%">
+        </li>
+        
         <div class="book">
 
             {%- include toc-date.html -%}
