--- a/_includes/body.html
+++ b/_includes/body.html
@@ -13,10 +13,12 @@
     <div class="page-wrapper" tabindex="-1" role="main">
         
         <div class="page-inner">
-            <a href="https://hits.seeyoufarm.com">
-                <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
+            <!-- <a href="https://hits.seeyoufarm.com">
+                <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a>  -->
             <div id="book-search-results">
                 <div class="search-noresults">
+                    <a href="https://hits.seeyoufarm.com">
+                        <img align="right" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://github.com/Jerrykim91/jerrykim91.github.io"/></a> 
                     <section class="normal markdown-section">
 
                         {% if page.title %}
@@ -34,5 +36,14 @@
         </div>
 
     </div>
-
+    <br>
+    <script src="https://utteranc.es/client.js"
+        repo="Jerrykim91/jerrykim91.github.io"
+        issue-term="title"
+        label="😎"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+    </script>
+    <br>
 </div>
