--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,7 +1,7 @@
 <div class="book-summary">
-    <!-- <div id="book-search-input" role="search">
+    <div id="book-search-input" role="search">
         <input type="text" placeholder="Type to search" />
-    </div> -->
+    </div>
     <nav role="navigation">
         <ul class="summary">
             {% if page.url == "/index.html" or page.url == "/" %}
