--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
                     </a>
                 {% endif %}
             </div>
-            <!-- {%- include search.html -%} -->
+            {%- include search.html -%}
 
             <script>
             var gitbook = gitbook || [];
