--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,9 +1,18 @@
 <div class="book-summary">
-    <div id="book-search-input" role="search">
+    <!-- <div id="book-search-input" role="search">
         <input type="text" placeholder="Type to search" />
-    </div>
+    </div> -->
     <nav role="navigation">
         <ul class="summary">
+            <li id="book-search-input" role="search">
+                <input type="text" placeholder="Type to search" />
+                </a>
+            </li>
+            <li>
+                <a href="{{site.baseurl}}/about_me.html" target="_blank" class="gitbook-link">About_Me(test)
+                </a>
+            </li>
+
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
             {% else %}
