--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,18 +24,9 @@
                         <i class="fa fa-angle-right"></i>
                     </a>
                 {% endif %}
-            <!-- </div>
-
-            {%- include search.html -%} -->
-            <div class="search-results">
-                <div class="has-results">
-                    <h1 class="search-results-title"><span class='search-results-count'></span> results matching "<span class='search-query'></span>"</h1>
-                    <ul class="search-results-list"></ul>
-                </div>
-                <div class="no-results">
-                    <h1 class="search-results-title">No results matching "<span class='search-query'></span>"</h1>
-                </div>
+                {%- include search.html -%}
             </div>
+
 
             <script>
             var gitbook = gitbook || [];
