--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,3 +32,10 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
+
+
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search-engine.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.js"></script>
+
