--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -7,9 +7,9 @@
 
         {% assign reversed_posts = site.posts | reverse %}
 
-        {% if reversed_posts %}
+        <!-- {% if reversed_posts %}
             <link rel="next" href="{{site.baseurl}}{{reversed_posts.first.url}}" />
-        {% endif %}
+        {% endif %} -->
     </head>
     <body>
         <div class="book">
@@ -19,19 +19,18 @@
             <div class="book-body">
                 {%- include body.html -%}
 
-                {% if reversed_posts %}
+                <!-- {% if reversed_posts %}
                     <a href="{{site.baseurl}}{{reversed_posts.first.url}}" class="navigation navigation-next navigation-unique" aria-label="Next page: {{reversed_posts.first.title}}">
                         <i class="fa fa-angle-right"></i>
                     </a>
-                {% endif %}
-                {%- include search.html -%}
+                {% endif %} -->
             </div>
 
 
             <script>
             var gitbook = gitbook || [];
             gitbook.push(function() {
-                gitbook.page.hasChanged({%- include metadata-home.json.tpl -%});
+                gitbook.page.hasChanged({%- include metadata-about_me.json.tpl -%});
             });
             </script>
         </div>
