--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
                         <i class="fa fa-angle-right"></i>
                     </a>
                 {% endif %}
-                {%- include search.html -%}
+                <!-- {%- include search.html -%} -->
             </div>
 
 
