--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -4,10 +4,10 @@
     </div> -->
     <nav role="navigation">
         <ul class="summary">
-            <li id="book-search-input" role="search">
+            <div id="book-search-input" role="search">
                 <input type="text" placeholder="Type to search" />
                 </a>
-            </li>
+            </div>
 
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
