--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,9 +37,9 @@
                         <i class="fa fa-angle-right"></i>
                     </a>
                 {% endif %}
-
+                    
             </div>
-
+            {%- include search.html -%}
             <script>
             var gitbook = gitbook || [];
             gitbook.push(function() {
