--- a/_includes/body.html
+++ b/_includes/body.html
@@ -31,7 +31,7 @@
                     </section>
                 </div>
 
-                 <!-- {%- include search.html -%} -->
+                 {%- include search.html -%}
             </div>
         </div>
 
