--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@
                 {% endif %}
                 <!-- {%- include search.html -%} -->
             </div>
-
+            {%- include search.html -%}
 
             <script>
             var gitbook = gitbook || [];
