--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -4,11 +4,10 @@
     </div> -->
     <nav role="navigation">
         <ul class="summary">
-            <div id="book-search-input" role="search">
-                <input type="text" placeholder="Type to search" />
-                </a>
-            </div>
-
+            {% if site.subscribers %}
+            <a class="subscribe-button" href="#subscribe">Search</a>
+            {% endif %}
+            
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
             {% else %}
