--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,9 +1,43 @@
 <div class="search-results">
-    <div class="has-results">
+    <ul class="mylist" id="search-results"></ul>
+    <!-- <div class="has-results">
         <h1 class="search-results-title"><span class='search-results-count'></span> results matching "<span class='search-query'></span>"</h1>
         <ul class="search-results-list"></ul>
     </div>
     <div class="no-results">
         <h1 class="search-results-title">No results matching "<span class='search-query'></span>"</h1>
-    </div>
+    </div> -->
 </div>
+
+<!-- ---
+title: Search Result
+navigation: true
+logo:
+class: page-template
+subclass: 'post page'
+---
+
+<form action="/search" method="get" hidden="hidden">
+    <label for="search-box"></label>
+    <input type="text" id="search-box" name="query">
+</form> -->
+
+
+
+<script>
+    window.store = {
+            {% for post in site.posts %}
+            "{{ post.url | slugify }}": {
+                "title": "{{ post.title | xml_escape }}",
+                    "author": "{{ post.author | xml_escape }}",
+                    "category": "{{ post.category | xml_escape }}",
+                    "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+                "url": "{{ post.url | xml_escape }}"
+            }
+            {% unless forloop.last %},{% endunless %}
+            {% endfor %}
+            };
+</script>
+
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-ver2/search.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-ver2/search.js"></script>
