--- a/_includes/search.html
+++ b/_includes/search.html
@@ -7,7 +7,24 @@
     <div class="no-results">
         <h1 class="search-results-title">No results matching "<span class='search-query'></span>"</h1>
     </div> -->
+<!--  Search -->
+<!-- {% if site.subscribers %}
+<div id="subscribe" class="subscribe-overlay">
+    <a class="subscribe-overlay-close" href="#"></a>
+    <div class="subscribe-overlay-content">
+        {% if site.logo %}
+        <img class="subscribe-overlay-logo" src="{{ site.baseurl }}{{ site.logo }}" alt="{{ site.title }}" />
+        {% endif %}
+        <h1 class="subscribe-overlay-title">Search {{ site.title }}</h1>
+        <p class="subscribe-overlay-description">
+            lunr.js를 이용한 posts 검색 </p>
+        {% include subscribe-form.html placeholder="keyword" %}
+    </div>
 </div>
+{% endif %} -->
+<!-- end Search -->
+</div>
+
 
 <!-- ---
 title: Search Result
