--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,12 +1,5 @@
 <div class="search-results">
     <ul class="mylist" id="search-results"></ul>
-    <!-- <div class="has-results">
-        <h1 class="search-results-title"><span class='search-results-count'></span> results matching "<span class='search-query'></span>"</h1>
-        <ul class="search-results-list"></ul>
-    </div>
-    <div class="no-results">
-        <h1 class="search-results-title">No results matching "<span class='search-query'></span>"</h1>
-    </div> -->
     <!--  Search -->
     {% if site.subscribers %}
     <div id="subscribe" class="subscribe-overlay">
@@ -19,6 +12,7 @@
         </div>
     </div>
     {% endif %}
+    <p>TEST</p>
     <!-- end Search -->
 </div>
 
