--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -12,6 +12,7 @@
             <form id="book-search-input" method="get" role="search">
                 <input type="text" placeholder="Type to search" id="search-box" name="query"/>
             </form>
+            <a href="/search/"><img src="/assets/images/icon/search.png"/></a
 
 
             <!-- end Search -->
