--- a/_includes/search.html
+++ b/_includes/search.html
@@ -66,9 +66,9 @@ permalink: /search/
   </ul>
 </div>
 
-<!— Html Elements for Search -->
-<div id="search-container">
-<input type="text" id="search-input" placeholder="search...">
+<!-- Html Elements for Search -->
+<div id="search-container" action="/search">
+<input type="text" id="search-input" placeholder="search..." name="query">
 <ul id="results-container"></ul>
 </div>
 
