--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,7 +1,9 @@
 <div class="book-summary">
+    <!--Search  -->
     <!-- <div id="book-search-input" role="search">
-        <input type="text" placeholder="Type to search" />
+        <input type="text" placeholder="Type to search" id="search-box" name="query" href="/search/"/>
     </div> -->
+    <!-- end Search -->
     <nav role="navigation">
         <ul class="summary">
             <!-- Search -->
@@ -9,10 +11,10 @@
             <a class="subscribe-button" href="#subscribe">Search</a>
             {% endif %} -->
 
-            <form id="book-search-input" method="get" role="search">
-                <input type="text" placeholder="Type to search" id="search-box" name="query"/>
-            </form>
-            <a href="/search/"></a>
+            <!-- <form id="book-search-input" method="get" role="search">
+                <input type="text" placeholder="Type to search" id="search-box" name="query" href="/search/"/>
+            </form> -->
+            <!-- <a href="/search/"></a> -->
 
 
             <!-- end Search -->
