--- a/_includes/search.html
+++ b/_includes/search.html
@@ -50,14 +50,13 @@ subclass: 'post page'
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-ver2/search.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-ver2/search.js"></script> {% endcomment %}
 
-
-
-
 ---
-layout: default
-page_title: Search
-permalink: /search/
+title: Search
+author: jerry
+category: search
+layout: post
 ---
+
 <div id="results">
   <h1><!-- `key` listing for `value` --></h1>
 
