--- a/_includes/search.html
+++ b/_includes/search.html
@@ -66,7 +66,7 @@ layout: post
 </div>
 
 <!-- Html Elements for Search -->
-<div id="search-container" >
+<div id="search-container" action="/search">
 <input type="text" id="search-input" placeholder="search..." name="query">
 <ul id="results-container"></ul>
 </div>
