--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,23 +1,10 @@
 <div class="book-summary">
     <!--Search  -->
-    <!-- <div id="book-search-input" role="search">
-        <input type="text" placeholder="Type to search" id="search-box" name="query" href="/search/"/>
-    </div> -->
+    <div id="book-search-input" role="search">
+        <input type="text" placeholder="Type to search" />
     <!-- end Search -->
     <nav role="navigation">
         <ul class="summary">
-            <!-- Search -->
-            <!-- {% if site.subscribers %}
-            <a class="subscribe-button" href="#subscribe">Search</a>
-            {% endif %} -->
-
-            <!-- <form id="book-search-input" method="get" role="search">
-                <input type="text" placeholder="Type to search" id="search-box" name="query" href="/search/"/>
-            </form> -->
-            <!-- <a href="/search/"></a> -->
-
-
-            <!-- end Search -->
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
             {% else %}
@@ -27,8 +14,9 @@
                     {{ site.title | escape }}
                 </a>
             </li>
+
             <li class="divider"></li>
-            
+
             {% assign reversed_posts = site.posts | reverse %}
 
             {% for post in reversed_posts %}
