--- a/_includes/search.html
+++ b/_includes/search.html
@@ -7,3 +7,9 @@
         <h1 class="search-results-title">No results matching "<span class='search-query'></span>"</h1>
     </div>
 </div>
+
+
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search-engine.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.js"></script>
