--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
                 {% endif %}
                 
             </div>
-            {%- include search.html -%}
+            <!-- {%- include search.html -%} -->
 
             <script>
                 var gitbook = gitbook || [];
