--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,10 +1,20 @@
 <div class="book-summary">
-    <!--Search  -->
-    <div id="book-search-input" role="search">
+    <!-- <div id="book-search-input" role="search">
         <input type="text" placeholder="Type to search" />
-    <!-- end Search -->
+    </div> -->
     <nav role="navigation">
         <ul class="summary">
+            <!-- Search -->
+            <!-- {% if site.subscribers %}
+            <a class="subscribe-button" href="#subscribe">Search</a>
+            {% endif %} -->
+
+            <form id="book-search-input" method="get" role="search">
+                <input type="text" placeholder="Type to search" id="search-box" name="query"/>
+            </form>
+
+
+            <!-- end Search -->
             {% if page.url == "/index.html" or page.url == "/" %}
             <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
             {% else %}
@@ -14,9 +24,8 @@
                     {{ site.title | escape }}
                 </a>
             </li>
-
             <li class="divider"></li>
-
+            
             {% assign reversed_posts = site.posts | reverse %}
 
             {% for post in reversed_posts %}
