--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
                 {% endif %}
                     
             </div>
-            <!-- {%- include search.html -%} -->
+            {%- include search.html -%}
             <script>
             var gitbook = gitbook || [];
             gitbook.push(function() {
