--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,44 +1,45 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
 
-        {%- include head.html -%}
+<head>
 
-        {% assign reversed_posts = site.posts | reverse %}
+    {%- include head.html -%}
 
-        {% if reversed_posts %}
-        <link rel="next" href="{{site.baseurl}}{{reversed_posts.first.url}}" />
-        {% endif %}
-    </head>
+    {% assign reversed_posts = site.posts | reverse %}
 
-    <body>
-        <div class="book">
+    {% if reversed_posts %}
+    <link rel="next" href="{{site.baseurl}}{{reversed_posts.first.url}}" />
+    {% endif %}
+</head>
 
-            {%- include toc-date.html -%}
+<body>
+    <div class="book">
 
-            <div class="book-body">
-                {%- include body.html -%}
+        {%- include toc-date.html -%}
 
-                {% if reversed_posts %}
-                <a href="{{site.baseurl}}{{reversed_posts.first.url}}" class="navigation navigation-next navigation-unique"
-                    aria-label="Next page: {{reversed_posts.first.title}}">
-                    <i class="fa fa-angle-right"></i>
-                </a>
-                {% endif %}
-                
-            </div>
-            <!-- {%- include search.html -%} -->
+        <div class="book-body">
+            {%- include body.html -%}
 
-            <script>
-                var gitbook = gitbook || [];
-                gitbook.push(function() {
-                    gitbook.page.hasChanged({%- include metadata-home.json.tpl -%});
-                });
-            </script>
+            {% if reversed_posts %}
+            <a href="{{site.baseurl}}{{reversed_posts.first.url}}" class="navigation navigation-next navigation-unique"
+                aria-label="Next page: {{reversed_posts.first.title}}">
+                <i class="fa fa-angle-right"></i>
+            </a>
+            {% endif %}
+            {%- include search.html -%}
         </div>
+        
 
-        {%- include footer.html -%}
+        <script>
+            var gitbook = gitbook || [];
+            gitbook.push(function() {
+                gitbook.page.hasChanged({%- include metadata-home.json.tpl -%});
+            });
+        </script>
+    </div>
 
-    </body>
+    {%- include footer.html -%}
+
+</body>
 
 </html>
