--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,12 +26,13 @@
                 <i class="fa fa-angle-right"></i>
             </a>
             {% endif %}
+            {%- include search.html -%}
         </div>
-
+        
 
         <script>
             var gitbook = gitbook || [];
-            gitbook.push(function () {
+            gitbook.push(function() {
                 gitbook.page.hasChanged({%- include metadata-home.json.tpl -%});
             });
         </script>
