--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
                 gitbook.page.hasChanged({%- include metadata-home.json.tpl -%});
             });
         </script>
-        {%- include search.html -%}
+        <!-- {%- include search.html -%} -->
     </div>
 
     {%- include footer.html -%}
