--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,12 @@
                 <i class="fa fa-angle-right"></i>
             </a>
             {% endif %}
-            
+            <!-- test -->
+            <p>{{site.toc.enabled}}</p>
+
+
+
+
         </div>
         
 
