--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -22,11 +22,18 @@
         <!-- 카테고리 페이지 -->
         {% for category in site.categories %}
                 <li class="chapter active"  data-level="1.1">
-                    <a href="{{ site.baseurl }}/{{ site.category_dir }}{{ category | first }}">{{category[0]}}</a>
-                </li>
+                    <!-- <a>{{category[0]}}</a> -->
+                    <a href="{{site.baseurl}}/{{category[0]}}">{{category[0]}}</a>
+                    <!-- <a href="{{ site.baseurl }}/{{ site.category_dir }}{{ category | first }}">{{category[0]}}</a> -->
             {% for post in category[1] %}
                 <li class="chapter" data-level="1.1">
-                    <!-- <a href="{{ category.url }}">{{ post.title | escape }}</a> -->
+                    <!-- <p>{{site.baseurl}}{{post.categories}}</p> -->
+
+                    <!-- # 카테고리 출력 -->
+                    <!-- <a href="{{site.baseurl}}{{post.categories}}">
+                        {{post.categories}}
+                    </a> -->
+
                     <a href="{{site.baseurl}}{{post.url}}">
                         {{ post.title | escape }}
                     </a>
@@ -47,13 +54,18 @@
 
             <li>
                 <a href="https://www.youtube.com/watch?v=hr2xGbc6jO0&t=286s" target="blank" class="gitbook-link">
-                    Test!
+                    이하이!
                 </a>
             </li>
             <!-- 작업중 : 카테고리 // https://jekyllrb-ko.github.io/docs/pages/ -->
             <li class="divider"></li>
-        
+            <li>
+                <a href="{{site.baseurl}}/category/" target="blank" class="gitbook-link">
+                    Test!
+                </a>
+            </li>
         </ul>
 
     </nav>
 </div>
+
