--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -15,6 +15,11 @@
                 <a href="{{site.baseurl}}">
                     {{ site.title | escape }}
                 </a>
+                
+                &nbsp; <a href="{{site.baseurl}}/category/" target="blank" class="gitbook-link">
+                    categories!
+                </a>
+            
             </li>
 
         <li class="divider"></li>
@@ -49,11 +54,7 @@
             </li>
             <!-- 작업중 : 카테고리 // https://jekyllrb-ko.github.io/docs/pages/ -->
             <li class="divider"></li>
-            <li>
-                <a href="{{site.baseurl}}/category/" target="blank" class="gitbook-link">
-                    categories - Test!
-                </a>
-            </li>
+            
         </ul>
     </nav>
 </div>
