--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,6 @@
 
 
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
-<script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
+{% comment %} <script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search-engine.js"></script>
-<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.js"></script> {% endcomment %}
