--- a/_includes/search.html
+++ b/_includes/search.html
@@ -15,7 +15,7 @@
 {% endfor %}
 </div>
 
-<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+<!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p> -->
 
 </div>
 
