--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,8 @@
 {%- endif -%}
 
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/algolia.css">
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/algolia.js">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css">
 
 <!-- <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.css"> -->
