--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -5,38 +5,38 @@
 <base href="{{ site.baseurl }}">
 
 <script>
+// const search = instantsearch({
+//   appId: '{{ site.algolia.application_id }}',
+//   apiKey: '{{ site.algolia.search_only_api_key }}',
+//   indexName: '{{ site.algolia.index_name }}'
+// });
+
 const search = instantsearch({
-  appId: '{{ site.algolia.application_id }}',
-  apiKey: '{{ site.algolia.search_only_api_key }}',
-  indexName: '{{ site.algolia.index_name }}'
-});
+    appId: '{{ site.algolia.application_id }}',
+    apiKey: '{{ site.algolia.search_only_api_key }}',
+    indexName: '{{ site.algolia.index_name }}',
+    searchParameters: {
+      restrictSearchableAttributes: [
+        'title',
+        'content'
+      ]
+    }
+  });
+  
 
 const hitTemplate = function(hit) {
-  let date = '';
-  if (hit.date) {
-    date = moment.unix(hit.date).format('MMM D, YYYY');
-  }
-  let url = `{{ site.baseurl }}${hit.url}#${hit.anchor}`;
+const url = hit.url;
+const title = hit._highlightResult.title.value;
+const content = hit._highlightResult.html.value;
 
-  const title = hit._highlightResult.title.value;
-
-  let breadcrumbs = '';
-  if (hit._highlightResult.headings) {
-    breadcrumbs = hit._highlightResult.headings.map(match => {
-      return `<span class="post-breadcrumb">${match.value}</span>`
-    }).join(' > ')
-  }
-  const content = hit._highlightResult.html.value;
-
-  return `
-    <div class="post-item">
-      <span class="post-meta">${date}</span>
-      <h2><a class="post-link" href="${url}">${title}</a></h2>
-      {{#breadcrumbs}}<a href="${url}" class="post-breadcrumbs">${breadcrumbs}</a>{{/breadcrumbs}}
-      <div class="post-snippet">${content}</div>
+return `
+    <div class="list__item">
+    <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
+        <h2 class="archive__item-title" itemprop="headline"><a href="{{ site.baseurl }}${url}">${title}</a></h2>
+        <div class="archive__item-excerpt" itemprop="description">${content}</div>
+    </article>
     </div>
-  `;
-}
+`;}
 
 
 search.addWidget(
@@ -57,6 +57,41 @@ search.addWidget(
 );
 
 search.start();
+
+
+
+
+
+// Adding searchbar and results widgets - 
+// https://github.com/mmistakes/minimal-mistakes/blob/master/_includes/search/algolia-search-scripts.html
+//search.addWidget(
+//  instantsearch.widgets.searchBox({
+//    container: '.search-searchbar',
+//    {% unless site.algolia.powered_by == false %}poweredBy: true,{% endunless %}
+//    placeholder: '{{ site.data.ui-text[site.locale].search_placeholder_text | default: "Enter your search term..." }}'
+//  })
+//);
+
+//search.addWidget(
+//  instantsearch.widgets.hits({
+//    container: '.search-hits',
+//    templates: {
+//      item: hitTemplate,
+//      empty: '{{ site.data.ui-text[site.locale].search_algolia_no_results | default: "No results" }}',
+//    }
+//  })
+//);
+
+// Starting the search only when toggle is clicked
+//$(document).ready(function () {
+//  $(".search__toggle").on("click", function() {
+//    if(!search.started) {
+//      search.start();
+//    }
+//  });
+//});
+
+
 </script>
 
 <style>
@@ -93,3 +128,30 @@ search.start();
   display: none;
 }
 </style>
+
+
+<!-- const hitTemplate = function(hit) {
+    let date = '';
+    if (hit.date) {
+      date = moment.unix(hit.date).format('MMM D, YYYY');
+    }
+    let url = `{{ site.baseurl }}${hit.url}#${hit.anchor}`;
+  
+    const title = hit._highlightResult.title.value;
+  
+    let breadcrumbs = '';
+    if (hit._highlightResult.headings) {
+      breadcrumbs = hit._highlightResult.headings.map(match => {
+        return `<span class="post-breadcrumb">${match.value}</span>`
+      }).join(' > ')
+    }
+    const content = hit._highlightResult.html.value;
+  
+    return `
+      <div class="post-item">
+        <span class="post-meta">${date}</span>
+        <h2><a class="post-link" href="${url}">${title}</a></h2>
+        {{#breadcrumbs}}<a href="${url}" class="post-breadcrumbs">${breadcrumbs}</a>{{/breadcrumbs}}
+        <div class="post-snippet">${content}</div>
+      </div>
+    `; -->
