--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,8 @@
             </a>
             {% endif %}
         </div>
-
+        <div class="search-searchbar"></div>
+        <div class="search-hits"></div>
 
         <script>
             var gitbook = gitbook || [];
